<resources>
    <string name="app_name">LuckyCardGame</string>

    <string name="btn_three">3명</string>
    <string name="btn_four">4명</string>
    <string name="btn_five">5명</string>

    <string name="card_a">A</string>
    <string name="card_b">B</string>
    <string name="card_c">C</string>
    <string name="card_d">D</string>
    <string name="card_e">E</string>

    <string name="result_title">경기 결과</string>
    <string name="result_restart">재시작</string>

    <string name="image_card_back">For card backside</string>
</resources>